Adicionando configuração do netlify

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,15 @@
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.app.json",
                         "aot": true,
-                        "assets": ["src/favicon.ico", "src/assets"],
+                        "assets": [
+                            "src/favicon.ico",
+                            "src/assets",
+                            {
+                                "glob": "_redirects",
+                                "input": "src",
+                                "output": "/"
+                            }
+                        ],
                         "styles": ["src/styles.scss"],
                         "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js"]
                     },
